# Training-Metrics-Database

./: .env.default  .envrc  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Standalone.Dockerfile  docker-compose.dev.yml  docker-compose.yml  entrypoint  manage.py  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml
app/: entrypoint  manage.py
app/dash_app/: middleware.py  urls.py
app/metrics/: admin.py  context_processors.py  forms.py  import_utils.py  metrics_migrations.py  middleware.py  models.py  tests.py  token.py  urls.py
app/tmd/: data-warning-message.json  settings.py  urls.py  value-aliases-spec.csv  wsgi.py
app/utils/: dev-requirements.txt  requirements.txt
dash_app/: apps.py  middleware.py  urls.py  views.py
data_migration/: .envrc  .gitignore  README.md  extra_requirements.txt  extract_from_db.py  requirements.txt
env/: django.env.default  metabase.env.default  postgres.env.default
maintenance/: Dockerfile  docker-compose.yml  nginx.conf
metrain/: asgi.py  settings.py  urls.py  wsgi.py
metrics/: admin.py  context_processors.py  forms.py  import_utils.py  middleware.py  models.py  urls.py  views.py
raw-tmd-data/: all_events_expanded.csv
tango/: asgi.py  middleware.py  models.py  settings.py  tmp-dash.py  urls.py  wsgi.py
templates/: Demographic_Quality_metrics_template_no_free_text.csv  Events_template.csv  impact_metrics_template_no_free_text.csv
tmd/: asgi.py  settings.py  urls.py
utils/: dev-requirements.txt  requirements.txt
(+112 files in other folders)
