[metadata]
name = tmd
version = 0.0.1
author = ELIXIR Contributors
author_email = none@elixir-europe.org
description = ELIXIR Training Metrics Database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elixir-europe-training/Training-Metrics-Database
project_urls =
    Bug Tracker = https://github.com/elixir-europe-training/Training-Metrics-Database/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .

[flake8]
extend-ignore = W503,E203,E501
